changed task role

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--! Header (Antareep) -->
         <div id="header"></div>
 
-        <!--! Hero (Rahi) -->
+        <!--! Hero (Touhid) -->
         <div id="hero"></div>
 
         <!--! Services (Rajvir) -->
