folder structure modified

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <!--! Load HTML components with respective ID's -->
         <script>
             $(function () {
-                $("#header").load("./components/header.html");
-                $("#footer").load("./components/footer.html");
-                $("#hero").load("./components/hero.html");
-                $("#services").load("./components/services.html");
-                $("#articles").load("./components/articles.html");
+                $("#header").load("./components/header/header.html");
+                $("#footer").load("./components/footer/footer.html");
+                $("#hero").load("./components/hero/hero.html");
+                $("#services").load("./components/services/services.html");
+                $("#articles").load("./components/articles/articles.html");
             });
         </script>
     </head>
