--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <!--! Stylesheet -->
         <link rel="stylesheet" href="./css/styles.css" />
 
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+   
         <!--! jQuery -->
         <script
             src="https://code.jquery.com/jquery-3.6.0.min.js"
